k8s/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  selector:
    app: sonarr
  ports:
  - name: sonarr
    port: 8080
    targetPort: 8989
